--- a/source/sass/blocks/forms.scss
+++ b/source/sass/blocks/forms.scss
@@ -1,5 +1,4 @@
 .forms {
-  padding-top: 27px;
 
   @media (min-width: $tablet-width) {
     padding: 50px 66px 0 38px;
