--- a/source/sass/blocks/info-form.scss
+++ b/source/sass/blocks/info-form.scss
@@ -1,4 +1,6 @@
 .info-form {
+  padding-bottom: 23px;
+
   @media (min-width: $desktop-width) {
     margin: 0;
     width: 46.7%;
