--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -38,7 +38,7 @@
 .product__feature span:first-child {
   @media (min-width: $tablet-width) {
     text-align: right;
-    width: 58%;
+    width: 59%;
   }
 }
 
