--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -1,11 +1,5 @@
 .program-form {
-  padding-top: 23px;
   border: 1px solid $c-gallery;
-
-  @media (min-width: $tablet-width) {
-    padding-left: 34px;
-    padding-top: 72px;
-  }
 
   @media (min-width: $desktop-width) {
     width: 46.7%;
