--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,4 @@
 .promo {
-  margin: 39px 20px 0 20px;
   background: url("../img/icon-gift.svg") 113px 65px no-repeat, url("../img/gift-photo-mobile@1x.jpg") no-repeat;
   width: 280px;
   height: 289px;
